# evalium

./: .gitignore  README.md  local.env.example  pyproject.toml  requirements.txt
evalium/: __init__.py  cli.py  dataset.py  evaluator.py  langsmith_integration.py
evalium/api/: embeddings_api.py
notebooks/: score.ipynb
notebooks/score_notebook/: README.md  baseline.ipynb  exp001_v02_gemini31.ipynb  exp003.ipynb  exp004.ipynb  exp005.ipynb  exp006.ipynb  exp006_gpt52.ipynb
notebooks/utils/: display.py  loader.py
scripts/: check_env.py  debug_embed_imports.py  inspect_data.py  inspect_excel.py  rank_all.sh  run_embed_sequence.py  test_embed.py  try_instantiate_embeddings.py
